FILE(GLOB SOURCES ./*.cpp ./Contrib/fastlz/fastlz.c ./*.h ./Contrib/fastlz/fastlz.h)

LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)

IF(NOT SDL2_ROOT_DIR)
    SET(SDL2_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Contrib/SDL")
ENDIF()

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(SDL2 REQUIRED)
INCLUDE_DIRECTORIES(SYSTEM ${OPENGL_INCLUDE_DIR})
INCLUDE_DIRECTORIES(SYSTEM Contrib/fastlz)
INCLUDE_DIRECTORIES(SYSTEM Contrib)
IF (WIN32)
    ADD_EXECUTABLE(demo WIN32 ${SOURCES})
ELSEIF(APPLE)
    ADD_EXECUTABLE(demo MACOSX_BUNDLE ${SOURCES})
ELSE()
    ADD_EXECUTABLE(demo ${SOURCES})
ENDIF()

FILE(COPY ../recastnavigation/RecastDemo/Bin/Meshes DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
FILE(COPY ../recastnavigation/RecastDemo/Bin/TestCases DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
FILE(COPY ../recastnavigation/RecastDemo/Bin/DroidSans.ttf DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

IF (WIN32)
    FILE(COPY "${SDL2_RUNTIME_LIBRARY}" DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
ENDIF()

ADD_DEPENDENCIES(demo DebugUtils Detour DetourCrowd DetourTileCache Recast Plus)
TARGET_LINK_LIBRARIES(demo ${OPENGL_LIBRARIES} SDL2::SDL2main DebugUtils Detour DetourCrowd DetourTileCache Recast Plus)
SET_TARGET_PROPERTIES(demo PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/bin/")
INSTALL(TARGETS demo
        RUNTIME DESTINATION bin
        BUNDLE DESTINATION bin)
INSTALL(DIRECTORY Bin/Meshes DESTINATION bin)
INSTALL(DIRECTORY Bin/TestCases DESTINATION bin)
INSTALL(FILES Bin/DroidSans.ttf DESTINATION bin)

IF (WIN32)
    INSTALL(FILES "${SDL2_RUNTIME_LIBRARY}" DESTINATION bin)
ENDIF()