FILE(COPY ${CMAKE_SOURCE_DIR}/recastnavigation/RecastDemo/cmake/ DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
FILE(COPY ${CMAKE_SOURCE_DIR}/recastnavigation/RecastDemo/Contrib/ DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/Contrib)
FILE(GLOB SOURCES ./*.cpp ./Contrib/fastlz/fastlz.c ./*.h ./Contrib/fastlz/fastlz.h)

LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)

IF(NOT SDL2_ROOT_DIR)
    SET(SDL2_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Contrib/SDL")
ENDIF()

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(SDL2 REQUIRED)
INCLUDE_DIRECTORIES(SYSTEM ${OPENGL_INCLUDE_DIR})
INCLUDE_DIRECTORIES(SYSTEM Contrib/fastlz)
INCLUDE_DIRECTORIES(SYSTEM Contrib)
IF (WIN32)
    ADD_EXECUTABLE(demo WIN32 ${SOURCES})
ELSEIF(APPLE)
    ADD_EXECUTABLE(demo MACOSX_BUNDLE ${SOURCES})
ELSE()
    ADD_EXECUTABLE(demo ${SOURCES})
ENDIF()

FILE(COPY ../recastnavigation/RecastDemo/Bin/DroidSans.ttf DESTINATION ${CMAKE_SOURCE_DIR}/bin/)
IF (WIN32)
    FILE(COPY "${SDL2_RUNTIME_LIBRARY}" DESTINATION ${CMAKE_SOURCE_DIR}/bin/)
ENDIF()

ADD_DEPENDENCIES(demo DebugUtils Detour DetourCrowd DetourTileCache Recast Plus)
TARGET_LINK_LIBRARIES(demo ${OPENGL_LIBRARIES} SDL2::SDL2main DebugUtils Detour DetourCrowd DetourTileCache Recast Plus)
SET_TARGET_PROPERTIES(demo PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/bin/")
INSTALL(TARGETS demo
        RUNTIME DESTINATION bin
        BUNDLE DESTINATION bin)
INSTALL(DIRECTORY "${CMAKE_SOURCE_DIR}/bin/" DESTINATION bin)
#INSTALL(FILES "${CMAKE_SOURCE_DIR}/bin/DroidSans.ttf" DESTINATION bin)

IF (WIN32)
    INSTALL(FILES "${SDL2_RUNTIME_LIBRARY}" DESTINATION bin)
ENDIF()