FILE(GLOB SOURCES ./*.cpp ./*.h)

IF(RECASTNAVIGATION_STATIC)
    ADD_LIBRARY(Plus STATIC ${SOURCES})
ELSE()
    ADD_LIBRARY(Plus SHARED ${SOURCES})
ENDIF()

ADD_LIBRARY(RecastNavigation::Plus ALIAS Plus)

SET(Detour_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Include")

TARGET_INCLUDE_DIRECTORIES(Plus PUBLIC
    "$<BUILD_INTERFACE:${Detour_INCLUDE_DIR}>"
)

SET_TARGET_PROPERTIES(Plus PROPERTIES
        SOVERSION ${SOVERSION}
        VERSION ${VERSION}
        )

INSTALL(TARGETS Plus
        ARCHIVE DESTINATION lib
        LIBRARY DESTINATION lib
        COMPONENT library
        )

FILE(GLOB INCLUDES ./*.h)
INSTALL(FILES ${INCLUDES} DESTINATION include)